<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/primary_background_color"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/layoutBookInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:orientation="horizontal">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/ivBookInfoCover"
            android:layout_width="70dp"
            android:layout_height="90dp"
            android:layout_marginStart="@dimen/margin_medium_2"
            android:scaleType="centerCrop"
            app:cornerRadius="@dimen/margin_small"
            android:src="@drawable/book_cover" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/margin_medium"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvBookInfoName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_medium_2"
                android:layout_marginTop="@dimen/margin_small"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/lbl_book_title"
                android:textStyle="bold"
                android:textColor="@color/text_title_color"
                android:textSize="@dimen/text_regular_2x" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvBookInfoSampleEbook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_medium_2"
                android:layout_marginTop="@dimen/margin_small"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/lbl_author_name"
                android:textSize="@dimen/text_regular" />

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        android:layout_marginTop="@dimen/margin_medium_2" />

    <LinearLayout
        android:id="@+id/layoutAddToShelf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/margin_medium"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/margin_large"
            android:layout_height="@dimen/margin_large"
            android:layout_marginStart="@dimen/margin_medium_2"
            android:layout_marginTop="@dimen/margin_small"
            app:srcCompat="@drawable/ic_baseline_add_black_24"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_medium_2"
            android:layout_marginTop="@dimen/margin_small"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/lbl_add_to_shelf"
            android:textSize="@dimen/text_regular_2x" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutRemoveFromLibrary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/margin_medium"
        android:layout_marginBottom="@dimen/margin_medium_2"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/margin_large"
            android:layout_height="@dimen/margin_large"
            android:layout_marginStart="@dimen/margin_medium_2"
            android:layout_marginTop="@dimen/margin_small"
            app:srcCompat="@drawable/ic_baseline_remove_circle_black_24"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_medium_2"
            android:layout_marginTop="@dimen/margin_small"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/lbl_remove_from_library"
            android:textSize="@dimen/text_regular_2x" />


    </LinearLayout>



</LinearLayout>